Initial fix for selection & input boxes covering the labels

--- a/bogenliga/src/app/modules/wettkampf/components/wettkampf/wettkampf.component.scss
+++ b/bogenliga/src/app/modules/wettkampf/components/wettkampf/wettkampf.component.scss
@@ -50,3 +50,8 @@
 textarea[readonly]{
   background-color: white;
 }
+
+.form-label-box{
+  margin-left:20px;
+  min-width: 150px;
+}
